# itempack

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: main.yml
src/: main.cpp  main.h
src/hooks/: rendercontexthook.h
src/inventory/: inventory.h  itemstack.h
src/render/: helper.h  inventoryrenderer.h
src/ui/: minecraftuirendercontext.h  resourcelocation.h
src/util/: config.h  keybinds.h  sigscanner.h
